[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
log = "0.4.27"
parking_lot = "0.12.4"
eframe = { version = "0.31.1", features = ["wgpu"] }
egui_extras = { version = "0.31.1", features = ["all_loaders"] }

# plugin-interface = { path = "../plugin-interface" }
# libloading = "0.8.8"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
env_logger = "0.11.8"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
    "fs",
    "io-util",
] }
image = "0.25.6"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["HtmlCanvasElement"] }
gloo = "0.11.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3.0.3"
