[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3.0.3"

[dependencies]
#plugin-interface = { path = "../plugin-interface" }
#starlink = { path = "../starlink" }

anyhow = "1.0.98"
log = "0.4.27"
parking_lot = "0.12.4"
eframe = { version = "0.31.1", features = ["wgpu"] }
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
egui-notify = "0.19.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
env_logger = "0.11.8"
tokio = { version = "1.45.1", features = [
    "parking_lot",
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
] }
image = "0.25.6"
opener = "0.8.2"
uuid = { version = "1.17.0", features = ["v4"] }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3.3", features = [
    "wasm_js",
] } #uuid wasm dependencies
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["HtmlCanvasElement"] }
gloo = "0.11.0"
uuid = { version = "1.17.0", features = ["v4", "rng-getrandom"] }
