[package]
name = "starlink"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
n0-future = "0.1.3"
iroh-gossip = "0.35.0"
rand = "0.9.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
iroh = { version = "0.35.0", features = [
    "discovery-local-network",
    "discovery-pkarr-dht",
] }
iroh-blobs = "0.35.0"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3.3", features = [
    "wasm_js",
] } #iroh wasm dependencies
iroh = "0.35.0"
